# devkit

./: .gitignore  .npmignore  .oxlintrc.json  Cargo.toml  README.md  devkit.ts  install.sh  package.json  repokit.ts  tsconfig.json
installation/: install.sh  symlink.sh
internals/: main.rs
internals/configuration/: configuration.rs
internals/executables/: internal_executable_definition.rs
internals/external_commands/: external_commands.rs  mod.rs
internals/internal_commands/: help.rs  internal_registry.rs  list_commands.rs  list_owners.rs  locate_command.rs  mod.rs  onboarder.rs  register_command.rs  search_commands.rs  typescript_command.rs  upgrade_repokit.rs
internals/internal_filesystem/: internal_filesystem.rs
internals/logger/: logger.rs
internals/repokit/: interfaces.rs  mod.rs  repokit.rs
internals/validations/: command_validations.rs
src/: CommandParser.ts  ConfigurationParser.ts  DevKitCommand.ts  DevKitConfig.ts  RepoKitCommand.ts  index.ts  types.ts
src/commands/: parse_commands.ts  parse_configuration.ts
workspaces/: main.rs
workspaces/concurrency/: thread_pool.rs
workspaces/configuration/: configuration.rs  configuration_template.ts
workspaces/devkit/: devkit.rs  interfaces.rs  mod.rs
workspaces/executables/: executable.rs  external_executable.rs  intenal_executable.rs  mod.rs
workspaces/executor/: executor.rs
workspaces/external_commands/: external_commands.rs
workspaces/internal_commands/: command_template.ts  help.rs  internal_registry.rs  list_commands.rs  list_owners.rs  locate_command.rs  mod.rs  onboarder.rs  (+5 more)
(+4 files in other folders)
